[gd_scene load_steps=5 format=2]

[ext_resource path="res://assests/Jungle tree.png" type="Texture" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/gameScene.gd" type="Script" id=6]

[node name="gameScene" type="Node2D"]
script = ExtResource( 6 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 251.5, 351 )
scale = Vector2( 0.528125, 0.7375 )
texture = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 268, 556 )

[node name="floor" parent="." instance=ExtResource( 3 )]
position = Vector2( 296, 614 )
scale = Vector2( 3.24, 0.796124 )

[node name="CollectTimer" type="Timer" parent="."]
autostart = true

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="LeftPos" type="Position2D" parent="."]
position = Vector2( 58, -56 )

[node name="RightPos" type="Position2D" parent="."]
position = Vector2( 446, -54 )

[node name="colors" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="CollectTimer" to="." method="_on_CollectTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
